Gi poao-tilgang mulighet for å force hentStatus fra arena synkront, siden synken fra arena er for treg.